--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hw4u_project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
