--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
-    "gridjs": "^6.0.6",
     "gridjs-react": "^6.0.1",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "joi": "^17.11.0",
-    "multi-range-slider-react": "^2.0.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
     "react-hook-form": "^7.49.2",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
