--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.49.2",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
     "react-loader-spinner": "^6.1.6",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.21.0",
