--- a/package.json
+++ b/package.json
@@ -4,23 +4,32 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@ckeditor/ckeditor5-build-classic": "^41.2.1",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@files-ui/react": "^1.2.4",
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.13.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/jquery": "^3.5.29",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "@types/react-slick": "^0.23.13",
+    "@types/react-stars": "^2.2.4",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^10.16.16",
     "gridjs-react": "^6.0.1",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
+    "interweave": "^13.1.0",
     "joi": "^17.11.0",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
@@ -34,6 +43,9 @@
     "react-range": "^1.8.14",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "react-stars": "^2.2.5",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
